Add a single example for testing

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,10 @@
 				</tr>
 			</tbody>
 		</table>
+
+		<h3>Examples</h3>
+
+		<p><a href="/accuweather?lang=en&unit=f">accuweather?lang=en&unit=f</a></p>
 	</body>
 
 	<style>
