Use cheerio, first draft

--- a/src/index.html
+++ b/src/index.html
@@ -71,8 +71,8 @@
 
 		<h3>Examples</h3>
 
-		<p><a href="/accuweather?lang=en&unit=f">accuweather?lang=en&unit=f</a></p>
-		<p><a href="/foreca?lang=pl">foreca?lang=pl</a></p>
+		<p><a href="?provider=accuweather&lang=fr">accuweather&lang=fr</a></p>
+		<p><a href="?provider=foreca&lang=pl">foreca&lang=pl</a></p>
 
 		<h3>Parameters</h3>
 
