--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,16 @@
 				color: dodgerblue;
 			}
 
+			form p {
+				display: inline-block;
+				margin: 0 1em 1em;
+			}
+
+			input,
+			select {
+				max-width: 100px;
+			}
+
 			table {
 				border-collapse: collapse;
 				text-align: left;
@@ -52,6 +62,79 @@
 			<a href="https://foreca.com">foreca</a> under the hood.
 		</p>
 
+		<h2>Test</h2>
+
+		<form action="/" method="get">
+			<p>
+				Provider <br />
+				<label>
+					<input type="radio" name="provider" value="accuweather" checked />
+					Accuweather
+				</label>
+				<br />
+				<label>
+					<input type="radio" name="provider" value="foreca" />
+					Foreca
+				</label>
+			</p>
+
+			<p>
+				Data <br />
+				<label>
+					<input type="radio" name="data" value="all" checked />
+					All
+				</label>
+				<br />
+				<label>
+					<input type="radio" name="data" value="simple" />
+					Simple
+				</label>
+			</p>
+
+			<p>
+				Unit <br />
+				<label>
+					<input type="radio" name="unit" value="C" checked />
+					Celsius
+				</label>
+				<br />
+				<label>
+					<input type="radio" name="unit" value="F" />
+					Farenheit
+				</label>
+			</p>
+
+			<p>
+				GPS coordinates <br />
+				<label>
+					Latitude
+					<input type="number" name="lat" value="48.853" />
+				</label>
+				<br />
+				<label>
+					Longitude
+					<input type="number" name="lon" value="2.348" />
+				</label>
+			</p>
+
+			<p>
+				<label>
+					Language <br />
+					<select name="lang" value="en">
+						<option value="en">English</option>
+						<option value="fr">French</option>
+						<option value="ja">Japanese</option>
+						<option value="pt-pt">Portuguese</option>
+						<option value="pt-br">Brazillan Portuguese</option>
+					</select>
+				</label>
+			</p>
+
+			<div>
+				<button type="submit">Test these parameters</button>
+			</div>
+		</form>
+
 		<h2>Install</h2>
 
 		<p>
@@ -69,17 +152,12 @@
 
 		<p>Define a weather provider to start using the API.</p>
 
-		<h3>Examples</h3>
-
-		<p><a href="?provider=accuweather&lang=fr">accuweather&lang=fr</a></p>
-		<p><a href="?provider=foreca&lang=pl">foreca&lang=pl</a></p>
-
 		<h3>Parameters</h3>
 
 		<table>
 			<thead>
 				<tr>
-					<th>Query</th>
+					<th>Parameter</th>
 					<th>Type</th>
 					<th>Required</th>
 					<th>Description</th>
