--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
 			<tbody>
 				<tr>
 					<th scope="row">provider</th>
-					<td>accuweather | foreca</td>
+					<td>accuweather, foreca</td>
 					<td>required</td>
 					<td>
 						Choose the weather provider. By default returns all available data, see
@@ -197,7 +197,7 @@
 				</tr>
 				<tr>
 					<th scope="row">unit</th>
-					<td>C | F</td>
+					<td>C, F</td>
 					<td>optional</td>
 					<td>
 						Useful for accuweather or when using "simple" data. Foreca always returns
@@ -206,7 +206,7 @@
 				</tr>
 				<tr>
 					<th scope="row">data</th>
-					<td>all | simple</td>
+					<td>all, simple</td>
 					<td>optional</td>
 					<td>
 						Select "all" to retrieve all the data from the provider's webpage. "simple"
