Missing word in docs

--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
 		<p>
 			Deploy a <a href="https://developers.cloudflare.com/workers/">Cloudflare Worker</a> to
 			start using your own racle-meteo. You do not need any API key. Migrating to another
-			cloud provider or your own server will the automatic location, meaning the
+			cloud provider or your own server will remove the automatic location, meaning the
 			<code>lat</code> and <code>lon</code> will be required.
 		</p>
 
