Move JSDoc to ./types

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 			<a href="https://foreca.com">foreca</a> under the hood.
 		</p>
 
-		<h2>Test</h2>
+		<h2>Use</h2>
 
 		<form action="/" method="get">
 			<p>
@@ -131,7 +131,7 @@
 			</p>
 
 			<div>
-				<button type="submit">Test these parameters</button>
+				<button type="submit">Send query</button>
 			</div>
 		</form>
 
@@ -148,7 +148,7 @@
 			<a href="https://github.com/victrme/racle-meteo">Source code</a>
 		</p>
 
-		<h2>Use</h2>
+		<h2>API Reference</h2>
 
 		<p>Define a weather provider to start using the API.</p>
 
