Migrated to Tyescript using Deno 2.0

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -57,8 +57,8 @@
 		<h1>Racle météo</h1>
 
 		<p>
-			This service cleverly transforms weather web pages into a usable (and free!) rest API.
-			It uses <a href="https://accuweather.com">accuweather</a> and/or
+			This service cleverly transforms weather web pages into a usable (and free!) rest API. It uses <a href="https://accuweather.com">accuweather</a>
+			and/or
 			<a href="https://foreca.com">foreca</a> under the hood.
 			<a href="github.com/victrme/racle-meteo">source code</a>
 		</p>
@@ -163,8 +163,7 @@
 					<td>accuweather, foreca</td>
 					<td>required</td>
 					<td>
-						Choose the weather provider. By default returns all available data, see
-						"data".
+						Choose the weather provider. By default returns all available data, see "data".
 					</td>
 				</tr>
 				<tr>
@@ -172,8 +171,7 @@
 					<td>string</td>
 					<td>optional</td>
 					<td>
-						Matches a location based on your query. Best to use as "City,CountryCode".
-						Adding "query" overrides "lat" & "lon" parameters.
+						Matches a location based on your query. Best to use as "City,CountryCode". Adding "query" overrides "lat" & "lon" parameters.
 					</td>
 				</tr>
 				<tr>
@@ -193,9 +191,8 @@
 					<td>string</td>
 					<td>optional</td>
 					<td>
-						English by default. Some languages are only available on accuweather, see
-						language list below. Incorrect <code>lang</code> does not fallback to
-						english.
+						English by default. Some languages are only available on accuweather, see language list below. Incorrect <code>lang</code>
+						does not fallback to english.
 					</td>
 				</tr>
 				<tr>
@@ -203,8 +200,7 @@
 					<td>C, F</td>
 					<td>optional</td>
 					<td>
-						Useful for accuweather or when using "simple" data. Foreca always returns
-						celsius and farenheit.
+						Useful for accuweather or when using "simple" data. Foreca always returns celsius and farenheit.
 					</td>
 				</tr>
 				<tr>
@@ -212,8 +208,8 @@
 					<td>all, simple</td>
 					<td>optional</td>
 					<td>
-						Select "all" to retrieve all the data from the provider's webpage. "simple"
-						returns only data available for all providers. "all" by default.
+						Select "all" to retrieve all the data from the provider's webpage. "simple" returns only data available for all providers. "all" by
+						default.
 					</td>
 				</tr>
 			</tbody>
