Update documentation and landing

--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,22 @@
 			</p>
 
 			<p>
+				Debug <br />
+				<label>
+					Off <br />
+					<input type="text" name="debug" value="off" checked />
+				</label>
+				<label>
+					Nodes <br />
+					<input type="text" name="debug" value="nodes" />
+				</label>
+				<label>
+					Content <br />
+					<input type="text" name="debug" value="content" />
+				</label>
+			</p>
+
+			<p>
 				Data <br />
 				<label>
 					<input type="radio" name="data" value="all" checked />
@@ -114,14 +130,14 @@
 			<p>
 				<label>
 					Latitude <br />
-					<input type="number" name="lat" value="48.853" />
+					<input type="number" name="lat" placeholder="48.853" />
 				</label>
 			</p>
 
 			<p>
 				<label>
 					Longitude <br />
-					<input type="number" name="lon" value="2.348" />
+					<input type="number" name="lon" placeholder="2.348" />
 				</label>
 			</p>
 
