Small llanding page tweak

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -88,16 +88,18 @@
 			<p>
 				Debug <br />
 				<label>
-					Off <br />
-					<input type="text" name="debug" value="off" checked />
+					<input type="radio" name="debug" value="off" checked />
+					Off
 				</label>
+				<br />
 				<label>
-					Nodes <br />
-					<input type="text" name="debug" value="nodes" />
+					<input type="radio" name="debug" value="nodes" />
+					Nodes
 				</label>
+				<br />
 				<label>
-					Content <br />
-					<input type="text" name="debug" value="content" />
+					<input type="radio" name="debug" value="content" />
+					Content
 				</label>
 			</p>
 
