Accuweather geolocation debug

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 			<p>
 				Debug <br />
 				<label>
-					<input type="radio" name="debug" value="off" checked />
+					<input type="radio" name="debug" value="" checked />
 					Off
 				</label>
 				<br />
@@ -100,6 +100,11 @@
 				<label>
 					<input type="radio" name="debug" value="content" />
 					Content
+				</label>
+				<br />
+				<label>
+					<input type="radio" name="debug" value="geo" />
+					Geo
 				</label>
 			</p>
 
