Get geolocation list first draft

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,8 @@
 		<h1>Racle météo</h1>
 
 		<p>
-			This service cleverly transforms weather web pages into a usable (and free!) rest API. It uses
+			This service cleverly transforms weather web pages into a usable (and free!) rest API.
+			It uses
 			<a href="https://accuweather.com">accuweather</a>
 			and/or
 			<a href="https://foreca.com">foreca</a> under the hood.
@@ -105,6 +106,19 @@
 				<label>
 					<input type="radio" name="debug" value="geo" />
 					Geo
+				</label>
+			</p>
+
+			<p>
+				Geo <br />
+				<label>
+					<input type="radio" name="geo" value="" checked />
+					Off
+				</label>
+				<br />
+				<label>
+					<input type="radio" name="geo" value="true" />
+					On
 				</label>
 			</p>
 
@@ -191,15 +205,24 @@
 					<th scope="row">provider</th>
 					<td>accuweather, foreca</td>
 					<td>required</td>
-					<td>Choose the weather provider. By default returns all available data, see "data".</td>
+					<td>
+						Choose the weather provider. By default returns all available data, see
+						"data".
+					</td>
+				</tr>
+				<tr>
+					<th scope="row">geo</th>
+					<td>any</td>
+					<td>optional</td>
+					<td>Geo returns a list of found locations.</td>
 				</tr>
 				<tr>
 					<th scope="row">query</th>
 					<td>string</td>
 					<td>optional</td>
 					<td>
-						Matches a location based on your query. Best to use as "City,CountryCode". Adding "query" overrides "lat" & "lon"
-						parameters.
+						Matches a location based on your query. Best to use as "City,CountryCode".
+						Adding "query" overrides "lat" & "lon" parameters.
 					</td>
 				</tr>
 				<tr>
@@ -219,7 +242,8 @@
 					<td>string</td>
 					<td>optional</td>
 					<td>
-						English by default. Some languages are only available on accuweather, see language list below. Incorrect
+						English by default. Some languages are only available on accuweather, see
+						language list below. Incorrect
 						<code>lang</code>
 						does not fallback to english.
 					</td>
@@ -228,22 +252,28 @@
 					<th scope="row">unit</th>
 					<td>C, F</td>
 					<td>optional</td>
-					<td>Useful for accuweather or when using "simple" data. Foreca always returns celsius and farenheit.</td>
+					<td>
+						Useful for accuweather or when using "simple" data. Foreca always returns
+						celsius and farenheit.
+					</td>
 				</tr>
 				<tr>
 					<th scope="row">data</th>
 					<td>all, simple</td>
 					<td>optional</td>
 					<td>
-						Select "all" to retrieve all the data from the provider's webpage. "simple" returns only data available for all
-						providers. "all" by default.
+						Select "all" to retrieve all the data from the provider's webpage. "simple"
+						returns only data available for all providers. "all" by default.
 					</td>
 				</tr>
 				<tr>
 					<th scope="row">debug</th>
 					<td>nodes, content, geo</td>
 					<td>optional</td>
-					<td>Debugging "nodes" returns a list of found html tags. "content" shows strings collected before being manipulated.</td>
+					<td>
+						Debugging "nodes" returns a list of found html tags. "content" shows strings
+						collected before being manipulated.
+					</td>
 				</tr>
 			</tbody>
 		</table>
