Add foreca locations, returns all location data by default

--- a/src/index.html
+++ b/src/index.html
@@ -89,11 +89,6 @@
 			<p>
 				Debug <br />
 				<label>
-					<input type="radio" name="debug" value="" checked />
-					Off
-				</label>
-				<br />
-				<label>
 					<input type="radio" name="debug" value="nodes" />
 					Nodes
 				</label>
@@ -102,20 +97,10 @@
 					<input type="radio" name="debug" value="content" />
 					Content
 				</label>
-				<br />
-				<label>
-					<input type="radio" name="debug" value="geo" />
-					Geo
-				</label>
 			</p>
 
 			<p>
 				Geo <br />
-				<label>
-					<input type="radio" name="geo" value="" checked />
-					Off
-				</label>
-				<br />
 				<label>
 					<input type="radio" name="geo" value="true" />
 					On
@@ -125,7 +110,7 @@
 			<p>
 				Data <br />
 				<label>
-					<input type="radio" name="data" value="all" checked />
+					<input type="radio" name="data" value="all" />
 					All
 				</label>
 				<br />
@@ -138,7 +123,7 @@
 			<p>
 				Unit <br />
 				<label>
-					<input type="radio" name="unit" value="C" checked />
+					<input type="radio" name="unit" value="C" />
 					Celsius
 				</label>
 				<br />
@@ -165,7 +150,7 @@
 			<p>
 				<label>
 					Query <br />
-					<input type="text" name="query" placeholder="Paris,FR" />
+					<input type="text" name="query" placeholder="Paris FR" />
 				</label>
 			</p>
 
