Add working geo param

--- a/src/index.html
+++ b/src/index.html
@@ -136,14 +136,14 @@
 			<p>
 				<label>
 					Latitude <br />
-					<input type="number" name="lat" placeholder="48.853" />
+					<input type="text" name="lat" placeholder="48.853" />
 				</label>
 			</p>
 
 			<p>
 				<label>
 					Longitude <br />
-					<input type="number" name="lon" placeholder="2.348" />
+					<input type="text" name="lon" placeholder="2.348" />
 				</label>
 			</p>
 
