--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,7 @@
 		<h1>Racle météo</h1>
 
 		<p>
-			This service cleverly transforms weather web pages into a usable (and free!) rest API.
-			It uses
+			This service cleverly transforms weather web pages into a usable (and free!) rest API. It uses
 			<a href="https://accuweather.com">accuweather</a>
 			and/or
 			<a href="https://foreca.com">foreca</a> under the hood.
@@ -191,8 +190,7 @@
 					<td>accuweather, foreca</td>
 					<td>required</td>
 					<td>
-						Choose the weather provider. By default returns all available data, see
-						"data".
+						Choose the weather provider. By default returns all available data, see "data".
 					</td>
 				</tr>
 				<tr>
@@ -206,8 +204,8 @@
 					<td>string</td>
 					<td>optional</td>
 					<td>
-						Matches a location based on your query. Best to use as "City,CountryCode".
-						Adding "query" overrides "lat" & "lon" parameters.
+						Matches a location based on your query. Best to use as "City,CountryCode". Adding "query" overrides "lat" & "lon"
+						parameters.
 					</td>
 				</tr>
 				<tr>
@@ -227,8 +225,7 @@
 					<td>string</td>
 					<td>optional</td>
 					<td>
-						English by default. Some languages are only available on accuweather, see
-						language list below. Incorrect
+						English by default. Some languages are only available on accuweather, see language list below. Incorrect
 						<code>lang</code>
 						does not fallback to english.
 					</td>
@@ -238,8 +235,7 @@
 					<td>C, F</td>
 					<td>optional</td>
 					<td>
-						Useful for accuweather or when using "simple" data. Foreca always returns
-						celsius and farenheit.
+						Useful for accuweather or when using "simple" data. Foreca always returns celsius and farenheit.
 					</td>
 				</tr>
 				<tr>
@@ -247,8 +243,8 @@
 					<td>all, simple</td>
 					<td>optional</td>
 					<td>
-						Select "all" to retrieve all the data from the provider's webpage. "simple"
-						returns only data available for all providers. "all" by default.
+						Select "all" to retrieve all the data from the provider's webpage. "simple" returns only data available for all
+						providers. "all" by default.
 					</td>
 				</tr>
 				<tr>
@@ -256,8 +252,7 @@
 					<td>nodes, content, geo</td>
 					<td>optional</td>
 					<td>
-						Debugging "nodes" returns a list of found html tags. "content" shows strings
-						collected before being manipulated.
+						Debugging "nodes" returns a list of found html tags. "content" shows strings collected before being manipulated.
 					</td>
 				</tr>
 			</tbody>
